Add page html semantic structure

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,180 @@
     <title>Anzen</title>
   </head>
   <body>
-    Anzen
+    <div class="container">
+      <nav class="breadcrumb">
+        <ul>
+          <li>
+            <a href="#">
+              <span class="icon is-small" aria-hidden="true">
+                <i class="fas fa-chevron-left"></i>
+              </span>
+              <span>Back</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <main>
+        <div aria-label="employee info" class="box">
+          <div class="employee-info">
+            <figure class="employee-avatar image">
+              <img class="is-rounded" src="https://i.pravatar.cc/256" />
+            </figure>
+            <div class="employee-main">
+              <h2 class="title">Jane Scott</h2>
+              <h3 class="subtitle">Accountant</h3>
+            </div>
+            <div class="employee-secondary">
+              <ul>
+                <li class="employee-field">
+                  <span class="icon-text">
+                    <span class="icon" aria-hidden="true">
+                      <i class="fas fa-file-lines"></i>
+                    </span>
+                    <span>Contract</span>
+                  </span>
+                  <span>
+                    Full time
+                  </span>
+                </li>
+                <li class="employee-field">
+                  <span class="icon-text">
+                    <span class="icon" aria-hidden="true">
+                      <i class="fas fa-user-tie"></i>
+                    </span>
+                    <span>Manager</span>
+                  </span>
+                  <span>
+                    John Doe
+                  </span>
+                </li>
+                <li class="employee-field">
+                  <span class="icon-text">
+                    <span class="icon" aria-hidden="true">
+                      <i class="fas fa-calendar"></i>
+                    </span>
+                    <span>Start date</span>
+                  </span>
+                  <span>
+                    10/10/2020
+                  </span>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div aria-label="employee onboarding steps" class="box p-0">
+          <table class="table is-fullwidth is-hoverable">
+            <thead>
+              <tr>
+                <th>Onboarding steps</th>
+                <th class="onboarding-status">Status</th>
+                <th>Documents</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Offer letter signatures</td>
+                <td class="onboarding-status">
+                  <span class="icon has-text-success" role="status" title="complete">
+                    <i class="fas fa-circle-check"></i>
+                  </span>
+                </td>
+                <td>
+                  <a class="button is-small is-link is-light" href="#">
+                    <span>Offer_letter.csv</span>
+                    <span class="icon">
+                      <i class="fas fa-download"></i>
+                    </span>
+                  </a>
+                </td>
+              </tr>
+
+              <tr>
+                <td class="onboarding-descrition">
+                  Invention agreements executed
+                </td>
+                <td class="onboarding-status">
+                  <span class="icon has-text-danger" role="status" title="incomplete">
+                    <i class="fas fa-circle-xmark"></i>
+                  </span>
+                </td>
+                <td>
+                  <span class="onboarding-status-legend">
+                    Missing document
+                  </span>
+                </td>
+              </tr>
+              <tr>
+                <td class="onboarding-descrition">
+                  Background checks completed
+                </td>
+                <td class="onboarding-status">
+                  <span class="icon has-text-grey" role="status" title="not valid">
+                    <i class="fas fa-circle-xmark"></i>
+                  </span>
+                </td>
+                <td>
+                  <span class="onboarding-status-legend">
+                    Step isn't integrated
+                  </span>
+                </td>
+              </tr>
+              <tr>
+                <td class="onboarding-descrition">
+                  Employee handbook
+                </td>
+                <td class="onboarding-status">
+                  <span class="icon has-text-danger" role="status" title="incomplete">
+                    <i class="fas fa-circle-xmark"></i>
+                  </span>
+                </td>
+                <td>
+                  <span class="onboarding-status-legend">
+                    Missing document
+                  </span>
+                </td>
+              </tr>
+              <tr>
+                <td class="onboarding-descrition">
+                  Benefits enroll/waiver
+                </td>
+                <td class="onboarding-status">
+                  <span class="icon has-text-success" role="status" title="complete">
+                    <i class="fas fa-circle-check"></i>
+                  </span>
+                </td>
+                <td>
+                  <a class="button is-small is-link is-light" href="#">
+                    <span>Benefits_enroll_waiver.pdf</span>
+                    <span class="icon">
+                      <i class="fas fa-download"></i>
+                    </span>
+                  </a>
+                </td>
+              </tr>
+              <tr>
+                <td class="onboarding-descrition">
+                  Harassment training
+                </td>
+                <td class="onboarding-status">
+                  <span class="icon has-text-success" role="status" title="complete">
+                    <i class="fas fa-circle-check"></i>
+                  </span>
+                </td>
+                <td>
+                  <a class="button is-small is-link is-light" href="#">
+                    <span>Harassment_training.pdf</span>
+                    <span class="icon">
+                      <i class="fas fa-download"></i>
+                    </span>
+                  </a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </main>
+    </div>
   </body>
 </html>
